@@ -1,5 +1,5 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.029.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.031.
 use strict;
 use warnings;
 
@@ -27,7 +27,6 @@ my %WriteMakefileArgs = (
     "Exporter" => "5.57",
     "File::Path" => "2.01",
     "File::Temp" => 0,
-    "Time::HiRes" => 0,
     "strict" => 0,
     "warnings" => 0
   },
@@ -55,7 +54,6 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "File::Temp" => 0,
   "Test::More" => 0,
-  "Time::HiRes" => 0,
   "strict" => 0,
   "warnings" => 0
 );
