@@ -2,6 +2,8 @@ Revision history for Test-TempDir-Tiny
 
 {{$NEXT}}
 
+    - drop Time::HiRes in favor of built-in select to implement a small sleep
+
 0.003     2015-01-04 06:30:28-05:00 America/New_York
 
     [Fixes]
